sema/testdata/gcc-c99-extra/reject/binary-constants-4.c
void
foo(void)
{
  double d;
  int i;

  d = 0b1101;
  d = 0b1101p1;
  d = 0x1101p1;
  i = 0b3011;
  i = 0b113;
}
